<resources>
    <string name="app_name">Dukan</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="sign_in_text">Already an User? Sign in</string>
    <string name="reg_text">New to dukan? Create an account</string>
    <string name="facebook">Facebook</string>
    <string name="register">Register</string>
    <string name="reg_texts">Here\'s \n your first\n step with \n us!</string>
    <string name="facebook_app_id">322045095558835</string>
    <string name="fb_login_protocol_scheme">fb322045095558835</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_notification">My Notification</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="search_for_product_brand_and_more">Search for Product, Brand and More</string>
    <string name="see_more_amp_manage"><![CDATA[See more & manage]]></string>
    <string name="no_notification_yet">No notification yet</string>
    <string name="browse_your_item_make_a_purchase">Browse your item, make a purchase</string>
    <string name="continue_shopping">Continue Shopping</string>

</resources>