<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:textSize="2sp"
            android:title="Home" />
        <item
            android:id="@+id/categories"
            android:icon="@drawable/categories"
            android:textSize="2sp"
            android:title="All Categories" />
        <item
            android:id="@+id/deals"
            android:icon="@drawable/deals"
            android:textSize="2sp"
            android:title="Today's Deals" />
        <group
            android:id="@+id/group2"
            android:checkableBehavior="single">
            <item
                android:id="@+id/cart"
                android:icon="@drawable/cart"
                android:textSize="2sp"
                android:title="@string/my_cart" />
            <item
                android:id="@+id/orders"
                android:icon="@drawable/orders"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/notification"
                android:icon="@drawable/notifications"
                android:title="@string/my_notification" />
            <item
                android:id="@+id/profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
        </group>

        <group
            android:id="@+id/group1"
            android:checkableBehavior="single">
            <item
                android:id="@+id/privacyPolicy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/help"
                android:title="@string/help_center" />
        </group>
        <group
            android:id="@+id/group4"
            android:checkableBehavior="single">
            <item
                android:id="@+id/singout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </group>
    </group>
</menu>