<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.milkyway.dukan.fragments.LoginFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.DefaultFragment">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C4FFFFFF"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="60dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/sign_in_to_your_account"
                android:textColor="#000"
                android:textSize="24dp" />

            <LinearLayout
                android:elevation="10dp"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="#38b693"
                    android:text="@string/sign_in_text"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    />

                <TextView
                    android:layout_margin="10dp"
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:background="#47F4AF"
                    android:text="@string/reg_text"
                    android:textAllCaps="false"
                    android:textColor="#434141"
                    />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>